--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "paypal-rest-sdk": "^1.8.1",
     "socket.io": "^4.4.1",
     "tiktok-live-connector": "^0.9.21"
   },
